Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/target/IncompleteArray.out
IncompleteArray.java:9:13: compiler.err.illegal.start.of.type
1 error
